# rmk-corne

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  keyboard.toml
.cargo/: config.toml
assets/fonts/: JetBrainsMono-Regular-12.bdf  JetBrainsMono-Regular.afm  JetBrainsMono-Regular.pfb
src/: central.rs  keymap.rs  macros.rs  peripherals.rs  prospector.rs
ui/: main.slint
