[package]
name = "rmk-corne"
version = "0.0.1"
authors = ["LegitCamper <sawyerbristol@gmail.com>"]
description = "Keyboard firmware written in Rust"
edition = "2024"

[features]
no_reset = []
reset = []
peripheral_left = []
peripheral_right = []
no_log = []
usb_logging = ["rmk/usb_log"]

[[bin]]
name = "central"
path = "src/central.rs"

[[bin]]
name = "peripheral_left"
path = "src/peripherals.rs"
required-features = ["peripheral_left"]

[[bin]]
name = "peripheral_right"
path = "src/peripherals.rs"
required-features = ["peripheral_right"]

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"
overflow-checks = false
lto = "fat"

[dependencies]
rmk = { git = "https://github.com/HaoboGu/rmk/", rev = "158b9e84f9ca092698ae75699edf90582efdba7d", features = [
  "nrf52840_ble",
  "split",
  "storage",
  "async_matrix",
  "adafruit_bl",
  "vial",
  "vial_lock",
], default-features = false }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "11d5c3c", features = [
  "defmt",
  "peripheral",
  "central",
  "nrf52840",
] }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "11d5c3c", features = [
  "defmt",
  "critical-section-impl",
  "nrf52840",
] }
bt-hci = { version = "0.6", features = ["defmt"] }

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = [
  "tick-hz-32_768",
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.8", features = [
  "defmt",
  "nrf52840",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "nfc-pins-as-gpio",
  "time",
] }
embassy-executor = { version = "0.9", features = [
  "defmt",
  "arch-cortex-m",
  "executor-thread",
] }
embassy-usb = "0.5.1"
embassy-sync = "0.7.2"
embassy-embedded-hal = "0.5.0"
embassy-futures = "0.1.2"

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
static_cell = "2"

rand = { version = "0.8.4", default-features = false }
rand_core = { version = "0.6" }
rand_chacha = { version = "0.3", default-features = false }

embedded-graphics = "0.8.1"
st7789v2_driver = { git = "https://github.com/LegitCamper/st7789v2_driver", rev = "c84224af3f4285d1ab05ec41e8725ce104515fc5" }
mousefood = { git = "https://github.com/j-g00da/mousefood", rev = "693d82ae9482c32be6363e72474faeb7d962cb1b", default-features = false }
ratatui = { version = "0.30.0", default-features = false }

spin = "0.10.0"
talc = { version = "4.4.3", default-features = false, features = ["lock_api"] }
